[gd_scene load_steps=17 format=2]

[ext_resource path="res://nodes/screens/GameScreen.gd" type="Script" id=1]
[ext_resource path="res://nodes/ui/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/fx/Starfield.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/objects/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://nodes/objects/Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://nodes/objects/Rock.tscn" type="PackedScene" id=6]
[ext_resource path="res://nodes/objects/Powerup.tscn" type="PackedScene" id=7]
[ext_resource path="res://nodes/objects/LifePowerup.tscn" type="PackedScene" id=8]
[ext_resource path="res://nodes/objects/Enemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://nodes/objects/WaveSystem.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sounds/alarm.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/ambient.wav" type="AudioStream" id=12]
[ext_resource path="res://nodes/ui/HUD.tscn" type="PackedScene" id=13]
[ext_resource path="res://nodes/objects/BombPowerup.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]
resource_name = "idle"

[sub_resource type="Animation" id=2]
resource_name = "warning"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Starfield" parent="." instance=ExtResource( 3 )]

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="Player" parent="PlayerContainer" instance=ExtResource( 4 )]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="Spawners" type="Node2D" parent="."]

[node name="RockSpawner" parent="Spawners" instance=ExtResource( 5 )]
speed = 300.0
element = ExtResource( 6 )

[node name="PowerupSpawner" parent="Spawners" instance=ExtResource( 5 )]
frequency = 12.0
speed = 150.0
rand_scale = Vector2( 1, 1 )
element = ExtResource( 7 )

[node name="LifePowerupSpawner" parent="Spawners" instance=ExtResource( 5 )]
frequency = 50.0
speed = 250.0
rand_scale = Vector2( 1, 1 )
element = ExtResource( 8 )
disabled = true

[node name="BombPowerupSpawner" parent="Spawners" instance=ExtResource( 5 )]
frequency = 20.0
speed = 300.0
rand_scale = Vector2( 1, 1 )
element = ExtResource( 14 )

[node name="EnemySpawner" parent="Spawners" instance=ExtResource( 5 )]
frequency = 7.0
rand_scale = Vector2( 0.75, 1.5 )
element = ExtResource( 9 )
target_container_path = NodePath("../../EnemyContainer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/warning = SubResource( 2 )

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="WaveSystem" parent="." instance=ExtResource( 10 )]

[node name="Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0
pitch_scale = 0.5
bus = "Effects"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -30.895
autoplay = true
bus = "Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 13 )]

[node name="Pause" parent="." instance=ExtResource( 2 )]
